# chat_list_research

./: Cargo.toml
db/: schema.sql
src/: db.rs  main.rs  templates.rs
src/db/: chat.rs  chat_preview.rs
src/templates/: chat.rs  index.rs
templates/: error.html  index.html  layout.html  macros.html
templates/chat/: empty-chat.html  messages.html  not-exists.html
templates/macros/: chat-list.html
