[package]
name = "chat_list_research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
lazy_static = "1.4.0"
libsql = { version = "0.2.0", featurs = ["full"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
